# cmake_multiproject_template

./: CMakeLists.txt
cmake/: common.cmake
src/exe/: CMakeLists.txt
src/exe/include/exe/: exe.h
src/exe/src/: exe.cpp  main.cpp
src/libA/: CMakeLists.txt
src/libA/include/libA/: A.h
src/libA/src/: A.cpp
src/libA/test/: CMakeLists.txt
src/libA/test/src/: ExampleTest.cpp
src/libB/: CMakeLists.txt
src/libB/include/libB/: B.h
src/libB/src/: B.cpp
src/libB/test/: CMakeLists.txt
src/libB/test/src/: ExampleTest.cpp
